--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@
 
 
     </div>
-
+    <script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.esm.js"></script>
+    <script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.js"></script>
     <script src="app.js"></script>
 </body>
 
