--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </select>
                 <input type="text" class="add__description" placeholder="Add description">
                 <input type="number" class="add__value" placeholder="Value">
-                <button class="add__btn"><ion-icon name="checkmark-circle"></ion-icon></button>
+                <button class="add__btn"><ion-icon name="ios-checkmark-circle-outline"></ion-icon></button>
             </div>
         </div>
 
